[tool.poetry]
name = "esqa"
version = "0.0.1"
description = ""
authors = ["Takahiko Ito <takahiko.ito@dr-ubie.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
click = ">=8.0.0"
elasticsearch = "7.10.1"
rbo = "^0.1.2"

[tool.poetry.dev-dependencies]
toml = "^0.10.0"
flake8 = "2.6.0"
black = "^22.1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
esqa ='esqa.cli:main'
